# widget-builder-assistant-poc

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pydantic_ai_learn/: architect_system_prompt.md  hello_world.py  widget_builder_docs.md
